# Ardentis

./: .gitignore  .gitmodules  BOM.xlsx  README.md  ardentis.pcb3d  packetSpec.md  sdkconfig  sdkconfig.old  ~$BOM.xlsx
ardentis/: #auto_saved_files#  MCU-Storage-PWR.kicad_sch  Power.kicad_sch  Pro.kicad_sch  README.md  Sensor-Radio.kicad_sch  ardentis-flight-BOM.csv  ardentis-ground-BOM.csv  ardentis.kicad_pcb  ardentis.kicad_prl  ardentis.kicad_pro  ardentis.kicad_sch  fp-info-cache  ignite.kicad_sch  ~ardentis.kicad_sch.lck
ardentis/lib/: Library.kicad_sym
components/Adafruit_LIS2MDL/: CMakeLists.txt
components/Adafruit_LIS331/: CMakeLists.txt  component.mk
components/Adafruit_Sensor/: CMakeLists.txt  component.mk
components/ESPUI/: CMakeLists.txt  component.mk
components/ICM42670P/: CMakeLists.txt  component.mk
components/MS5611/: CMakeLists.txt  component.mk
components/RadioLib/: CMakeLists.txt
components/SX126x-Arduino/: CMakeLists.txt  component.mk
components/SparkFun_u-blox_GNSS_v3/: CMakeLists.txt  component.mk
docs/: Doxyfile  DoxygenLayout.xml  README.md
docs/html/: _radio_parameters_8h_source.html  annotated.html  annotated_dup.js  api.html  api.js  ard__deployment_8cpp.html  ard__deployment_8h.html  ard__deployment_8h.js  ard__deployment_8h__dep__incl.map  ard__deployment_8h__dep__incl.md5  ard__deployment_8h__incl.map  ard__deployment_8h__incl.md5  ard__deployment_8h_source.html  ard__log_8cpp.html  ard__log_8cpp__incl.map  ard__log_8cpp__incl.md5  ard__log_8h.html  ard__log_8h.js  ard__log_8h__dep__incl.map  ard__log_8h__dep__incl.md5  ard__log_8h_source.html  ard__radio_8cpp.html  ard__radio_8cpp__incl.map  ard__radio_8cpp__incl.md5  ard__radio_8h.html  ard__radio_8h.js  ard__radio_8h__dep__incl.map  ard__radio_8h__dep__incl.md5  ard__radio_8h__incl.map  ard__radio_8h__incl.md5  ard__radio_8h_source.html  ard__radio__packet__spec_8h_source.html  ard__sensor_8h_source.html  ard__ui_8h_source.html  class_fire_pins.html  classard_log-members.html  classard_log.html  classard_log.js  classard_output_g_p_i_o-members.html  classard_output_g_p_i_o.html  (+48 more)
docs/latex/: _radio_parameters_8h_source.tex  annotated.tex  api.tex  ard__deployment_8cpp.tex  ard__deployment_8h.tex  ard__deployment_8h__dep__incl.md5  ard__deployment_8h__incl.md5  ard__deployment_8h_source.tex  ard__log_8cpp.tex  ard__log_8cpp__incl.md5  ard__log_8h.tex  ard__log_8h__dep__incl.md5  ard__log_8h_source.tex  ard__radio_8cpp.tex  ard__radio_8cpp__incl.md5  ard__radio_8h.tex  ard__radio_8h__dep__incl.md5  ard__radio_8h__incl.md5  ard__radio_8h_source.tex  ard__radio__packet__spec_8h_source.tex  ard__sensor_8h_source.tex  ard__ui_8h_source.tex  class_fire_pins.tex  classard_log.tex  classard_output_g_p_i_o.tex  classard_radio.tex  classard_sensors.tex  classard_sensors__coll__graph.md5  data__struct_8h_source.tex  files.tex  fire__modes_8hpp_source.tex  group__code.tex  main.tex  main_8cpp.tex  main_8cpp__incl.md5  pins_8h_source.tex  preference__shorthand_8h_source.tex  preference__values_8h_source.tex  refman.fdb_latexmk  refman.fls  (+8 more)
main/: CMakeLists.txt  README.md  RadioParameters.h  ard_deployment.cpp  ard_deployment.h  ard_log.cpp  ard_log.h  ard_radio.cpp  ard_radio.h  ard_radio_packet_spec.cpp  ard_radio_packet_spec.h  ard_sensor.cpp  ard_sensor.h  data_struct.h  file_spec.cpp  fire_modes.hpp  flight.cpp  ground.cpp  idf_component.yml  main.cpp  pins.h  preference_shorthand.h  preference_values.h  write_preferences.cpp
test/: CMakeLists.txt
(+48 files in other folders)
